# v2ray-source-hunter

./: README.md  output.json  pyproject.toml
.github/workflows/: ci.yml  telegram-test.yml
registry/: candidate_queue.json  candidates.json  config_history.json  dead_paths.json  discovered_repositories.json  discovered_telegram_channels.json  discovery_report.json  experimental.json  generated_telegram_feeds.json  hunt_report.json  redundant.json  rejected.json  repositories.json  seeds.json  source_history.json  telegram_channels.json  trusted_sources.json  v2ray_finder_sources.json  validated_configs.json
registry/best/: elite.json  elite.txt  elite_ss.txt  elite_trojan.txt  elite_vless.txt  elite_vmess.txt  fresh.json  fresh.txt  fresh_ss.txt  fresh_trojan.txt  fresh_vless.txt  fresh_vmess.txt  index.json  stable.json  stable.txt  stable_ss.txt  stable_trojan.txt  stable_vless.txt  stable_vmess.txt
source_hunter/: __init__.py  auto_discover.py  best_configs.py  candidate_queue.py  cli.py  config_history.py  exporter.py  generated_feeds.py  github_collect.py  http_client.py  models.py  pipeline.py  preflight.py  protocols.py  quality_gate.py  real_check.py  redundancy.py  repo_tree_collect.py  sampling.py  scoring.py  seed_collect.py  source_history.py  sync_registry.py  tcp_check.py  telegram_collect.py  telegram_report.py  utils.py  validated_configs.py  web_collect.py
source_hunter/extractors/: __init__.py  base64_subscription.py  clash_yaml.py  combined.py  html_links.py  raw_uri.py
