[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "source-hunter"
version = "0.1.0"
description = "Public registry discovery and validation engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "PyYAML>=6.0.1"
]

[project.scripts]
source-hunter = "source_hunter.cli:main"

[tool.setuptools.packages.find]
include = ["source_hunter*"]
